@startuml

title __GUI's Class Diagram__\n

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.MainFrame {
          ~ dec : JLabel
          ~ dec2 : JLabel
          ~ firstPanel : JPanel
          ~ go : JButton
          ~ image : JLabel
          ~ lat : double[]
          ~ logo : JLabel
          ~ lon : double[]
          ~ optionBox : JComboBox
          ~ textTop : JLabel
          ~ towns : String[]
          + MainFrame()
          + setButton()
          + setFirstPanel()
          + setLabel()
          + setLabelsImage()
          + setOptions()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.SecondFrame {
          ~ exit : JButton
          ~ firstPanel : JPanel
          ~ lat : double
          ~ left : JPanel
          ~ lon : double
          ~ name : JLabel
          ~ right : JPanel
          ~ textArea : JTextArea
          ~ update : JButton
          + SecondFrame()
          + setButton()
          + setLabel()
          + setSecondPanel()
          + showInformation()
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.Thermometer {
          ~ thermometer : JThermometer
          + Thermometer()
          + getThermometer()
          + setThermometer()
      }
    }
  }
  

  es.ull.patrones.gui.MainFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.SecondFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.SecondFrame o-- es.ull.patrones.pattern.EventManager : manager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
